[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake-build-extension>=0.4",
    "cppyy==2.4.2",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build-frontend = "build"

[project]
name = "5glena-lyapunov-mac-scheduler"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []
